Fix long NPC types wrapping out of type box

--- a/dnd5e.css
+++ b/dnd5e.css
@@ -1549,6 +1549,9 @@
 .dnd5e.sheet.actor.npc .summary .creature-type span {
   position: relative;
 }
+.dnd5e.sheet.actor.npc .summary .creature-type:hover input {
+  padding-right: 1em;
+}
 .dnd5e.sheet.actor.npc .summary .creature-type .config-button {
   position: absolute;
   display: none;
